# university-6sem-data-analysis

./: README.md  pyproject.toml
module1/practice1/: cafe.db  persons.json  practice1.ipynb
module1/test1/: test1.html  test1.ipynb
module3/practice3/: practice3.html  practice3.ipynb
topic1/practice1/: persons.html  practice1.html  practice1.ipynb
topic1/questions1/: questions1.html  questions1.ipynb
topic1/test1/: test1.html
topic2/practice2/: data5.json  practice2.html  practice2.ipynb
topic2/questions2/: questions2.html  questions2.ipynb
topic2/test2/: test2.html  test2.ipynb
topic3/practice3/: practice3.html  practice3.ipynb
topic3/questions3/: accel.csv  questions3.html  questions3.ipynb
topic4/practice4/: practice4.html  practice4.ipynb
topic4/questions4/: questions4.html  questions4.ipynb  sensor.csv
topic5/practice5/: practice5.html  practice5.ipynb
topic5/questions5/: questions5.html  questions5.ipynb
topic6/practice6/: practice6.html  practice6.ipynb
topic6/questions6/: questions6.html  questions6.ipynb
topic7/practice7/: BikesData.csv  practice7.html  practice7.ipynb
topic7/questions7/: questions7.html  questions7.ipynb
topic8/practice8/: Bikes.csv  practice8.html  practice8.ipynb
topic8/questions8/: exams.csv  questions8.html  questions8.ipynb
